Agentforce/force-app/main/default/objects/Bid_Support__c/Bid_Support__c.object-meta.xml
<CustomObject>
    <description>AD-443 Create Bid Support Records</description>
    <label>Bid Support</label>
    <nameField>
        <displayFormat>BSR-{000000}</displayFormat>
        <label>Bid Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Support</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>