Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Additional_BSR_Design__c.field-meta.xml
<CustomField>
    <fullName>Additional_BSR_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design</label>
    <type>Checkbox</type>
</CustomField>