Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Additional_BSR_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Additional_BSR_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing</label>
    <type>Checkbox</type>
</CustomField>