Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Allocated_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Date__c</fullName>
    <label>Allocated</label>
    <type>Date</type>
</CustomField>