Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Allow_New_BSR__c.field-meta.xml
<CustomField>
    <fullName>Allow_New_BSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow New BSR</label>
    <type>Checkbox</type>
</CustomField>