Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Approval_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Decision_Date__c</fullName>
    <label>Approval Decision Date</label>
    <type>Date</type>
</CustomField>