Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested__c</fullName>
    <label>Approval Requested</label>
    <type>Date</type>
</CustomField>