Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved</label>
    <type>Date</type>
</CustomField>