Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <formula>Owner:User.Full_Name__c &amp;  Owner:Queue.QueueName</formula>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>