Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Assigned_To_DEP__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_DEP__c</fullName>
    <label>Assigned To DEP</label>
    <type>Email</type>
</CustomField>