Agentforce/force-app/main/default/objects/Bid_Support__c/fields/AvTech__c.field-meta.xml
<CustomField>
    <fullName>AvTech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AvTech</label>
    <type>Checkbox</type>
</CustomField>