Agentforce/force-app/main/default/objects/Bid_Support__c/fields/AvTech_Picklist__c.field-meta.xml
<CustomField>
    <fullName>AvTech_Picklist__c</fullName>
    <label>AvTech</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AvTech Passenger Assistance - Console</fullName>
            </value>
            <value>
                <fullName>AvTech Passenger Assistance - Mobile</fullName>
            </value>
            <value>
                <fullName>AvTech Shuttle - Console</fullName>
            </value>
            <value>
                <fullName>AvTech Shuttle - Mobile</fullName>
            </value>
            <value>
                <fullName>AvTech Turnaround - Console</fullName>
            </value>
            <value>
                <fullName>AvTech Turnaround - Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>