Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bespoke_IT_Support__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_IT_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bespoke IT Support</label>
    <type>Checkbox</type>
</CustomField>