Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-443 Create Bid Support Records</description>
    <label>Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipLabel>Bid Support</relationshipLabel>
    <relationshipName>Bid_Support</relationshipName>
    <type>Lookup</type>
</CustomField>