Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Assigned_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Bid_Assigned_To_Email__c</fullName>
    <description>AD-825 to allocate action points to non-salesforce users using their email address</description>
    <label>Bid Assigned To Email</label>
    <type>Email</type>
</CustomField>