Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Bid_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_SupportObYL</relationshipName>
    <type>Lookup</type>
</CustomField>