Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Phase__c.field-meta.xml
<CustomField>
    <fullName>Bid_Phase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bid Phase</label>
    <referenceTo>Bid_Phase__c</referenceTo>
    <relationshipLabel>Bid Support</relationshipLabel>
    <relationshipName>Bid_Support</relationshipName>
    <type>Lookup</type>
</CustomField>