Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Phase_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bid_Phase_Formula__c</fullName>
    <formula>TEXT(Bid_Phase__r.Type__c)</formula>
    <label>Phase</label>
    <type>Text</type>
</CustomField>