Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bid_Reference__c</fullName>
    <formula>Bid__r.Name</formula>
    <label>Bid Reference</label>
    <type>Text</type>
</CustomField>