Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Sharepoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Bid_Sharepoint_URL__c</fullName>
    <label>Bid SharePoint URL</label>
    <type>Url</type>
</CustomField>