Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Bid_Sponsor__c</fullName>
    <label>Bid Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>