Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Support_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Bid_Support_CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Bid Support CaseSafeID</label>
    <type>Text</type>
</CustomField>