Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Support_Complete__c.field-meta.xml
<CustomField>
    <fullName>Bid_Support_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Support Complete</label>
    <type>Checkbox</type>
</CustomField>