Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Support_Request_No__c.field-meta.xml
<CustomField>
    <fullName>Bid_Support_Request_No__c</fullName>
    <label>Bid Support Request No</label>
    <type>AutoNumber</type>
</CustomField>