Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Team__c.field-meta.xml
<CustomField>
    <fullName>Bid_Team__c</fullName>
    <description>The selected Bid Team from the Opportunity</description>
    <formula>TEXT(Opportunity__r.Bid_Team__c)</formula>
    <label>Bid Team</label>
    <type>Text</type>
</CustomField>