Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Team_DEP__c.field-meta.xml
<CustomField>
    <fullName>Bid_Team_DEP__c</fullName>
    <label>Bid Team DEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>