Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Team_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Bid_Team_Feedback__c</fullName>
    <label>Bid Team Feedback</label>
    <type>TextArea</type>
</CustomField>