Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Bid_Writer__c.field-meta.xml
<CustomField>
    <fullName>Bid_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_SupportOben</relationshipName>
    <type>Lookup</type>
</CustomField>