Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Board_Review__c.field-meta.xml
<CustomField>
    <fullName>Board_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Review</label>
    <type>Checkbox</type>
</CustomField>