Agentforce/force-app/main/default/objects/Bid_Support__c/fields/BSR_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>BSR_Reviewed__c</fullName>
    <label>BSR Reviewed</label>
    <type>Date</type>
</CustomField>