Agentforce/force-app/main/default/objects/Bid_Support__c/fields/BsrCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>BsrCaseSafeID__c</fullName>
    <label>BsrCaseSafeID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>