Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>TEXT( Opportunity__r.Owner.Business_Unit__c )</formula>
    <inlineHelpText>Business Unit from Opportunity Owner</inlineHelpText>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>