Agentforce/force-app/main/default/objects/Bid_Support__c/fields/CAFM__c.field-meta.xml
<CustomField>
    <fullName>CAFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAFM</label>
    <type>Checkbox</type>
</CustomField>