Agentforce/force-app/main/default/objects/Bid_Support__c/fields/CAFM_Picklist__c.field-meta.xml
<CustomField>
    <fullName>CAFM_Picklist__c</fullName>
    <label>CAFM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connect (Supplier Portal)</fullName>
            </value>
            <value>
                <fullName>Concept Evolution (Core System)</fullName>
            </value>
            <value>
                <fullName>Concept Reach (Client Portal, Concept)</fullName>
            </value>
            <value>
                <fullName>FSI Go (Mobile Working)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>