Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid Support Declined</fullName>
            </value>
            <value>
                <fullName>Bid Support Cancelled</fullName>
            </value>
            <value>
                <fullName>Opportunity Lost</fullName>
            </value>
            <value>
                <fullName>Opportunity Withdrawn</fullName>
            </value>
            <value>
                <fullName>Opportunity Won</fullName>
            </value>
            <value>
                <fullName>BSR Cancelled</fullName>
                <isActive>false</isActive>
                <label>BSR Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>