Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Capex__c.field-meta.xml
<CustomField>
    <fullName>Capex__c</fullName>
    <label>Capex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>