Agentforce/force-app/main/default/objects/Bid_Support__c/fields/CapEx_Percent__c.field-meta.xml
<CustomField>
    <fullName>CapEx_Percent__c</fullName>
    <label>CapEx %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>