Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>