Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Opportunity Lost</fullName>
            </value>
            <value>
                <fullName>Opportunity Withdrawn</fullName>
            </value>
            <value>
                <fullName>Opportunity Won</fullName>
            </value>
            <value>
                <fullName>Approval Declined</fullName>
                <isActive>false</isActive>
                <label>Approval Declined</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>