Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Confirm_Files_Attached__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Files_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Files Attached</label>
    <type>Checkbox</type>
</CustomField>