Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Type__c</fullName>
    <formula>TEXT( Opportunity__r.Owner.Corporate_Type__c )</formula>
    <label>Corporate Type</label>
    <type>Text</type>
</CustomField>