Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Costing_Overview__c.field-meta.xml
<CustomField>
    <fullName>Costing_Overview__c</fullName>
    <label>Costing Overview</label>
    <type>TextArea</type>
</CustomField>