Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Costings__c.field-meta.xml
<CustomField>
    <fullName>Costings__c</fullName>
    <label>Costings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>