Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Opportunity__r.Owner.Country</formula>
    <inlineHelpText>Country from Opportunity Owner</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>