Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Days_Available__c.field-meta.xml
<CustomField>
    <fullName>Days_Available__c</fullName>
    <label>Days Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>