Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Decision_Maker_Perception__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Perception__c</fullName>
    <label>Perception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>