Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Design_Brief__c.field-meta.xml
<CustomField>
    <fullName>Design_Brief__c</fullName>
    <label>Design Brief</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>