Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Design_Manager__c.field-meta.xml
<CustomField>
    <fullName>Design_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support3</relationshipName>
    <type>Lookup</type>
</CustomField>