Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Design_Team_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Design_Team_Feedback__c</fullName>
    <label>Design Team Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>