Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Divisional_Review__c.field-meta.xml
<CustomField>
    <fullName>Divisional_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Divisional Review</label>
    <type>Checkbox</type>
</CustomField>