Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Criteria__c</fullName>
    <label>Evaluation Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>