Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Files_Attached__c.field-meta.xml
<CustomField>
    <fullName>Files_Attached__c</fullName>
    <label>Files Attached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>