Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Head_of_Bid__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Bid</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support1</relationshipName>
    <type>Lookup</type>
</CustomField>