Agentforce/force-app/main/default/objects/Bid_Support__c/fields/HR_Expert_email__c.field-meta.xml
<CustomField>
    <fullName>HR_Expert_email__c</fullName>
    <label>HR Expert [email]</label>
    <type>Email</type>
</CustomField>