Agentforce/force-app/main/default/objects/Bid_Support__c/fields/IOT__c.field-meta.xml
<CustomField>
    <fullName>IOT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IOT</label>
    <type>Checkbox</type>
</CustomField>