Agentforce/force-app/main/default/objects/Bid_Support__c/fields/IOT_Text__c.field-meta.xml
<CustomField>
    <fullName>IOT_Text__c</fullName>
    <label>IOT</label>
    <type>TextArea</type>
</CustomField>