Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Is_Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Bid_Manager__c</fullName>
    <description>Ticked if Current User = Bid Manager</description>
    <formula>Bid_Manager__c = $User.Id</formula>
    <label>Is Bid Manager</label>
    <type>Checkbox</type>
</CustomField>