Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Is_Head_of_Bid__c.field-meta.xml
<CustomField>
    <fullName>Is_Head_of_Bid__c</fullName>
    <description>Ticked if Current User = Head of Bid</description>
    <formula>Head_of_Bid__c = $User.Id</formula>
    <label>Is Head of Bid</label>
    <type>Checkbox</type>
</CustomField>