Agentforce/force-app/main/default/objects/Bid_Support__c/fields/IT_Equipment__c.field-meta.xml
<CustomField>
    <fullName>IT_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Equipment</label>
    <type>Checkbox</type>
</CustomField>