Agentforce/force-app/main/default/objects/Bid_Support__c/fields/IT_Equipment_Picklist__c.field-meta.xml
<CustomField>
    <fullName>IT_Equipment_Picklist__c</fullName>
    <label>IT Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD Account/MS365</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Headsets</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>MFD/Printer</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Printer/Desktop</fullName>
            </value>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>