Agentforce/force-app/main/default/objects/Bid_Support__c/fields/IT_Requirements_No__c.field-meta.xml
<CustomField>
    <fullName>IT_Requirements_No__c</fullName>
    <label>IT Requirements No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>