Agentforce/force-app/main/default/objects/Bid_Support__c/fields/IT_Support_Requirements__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Requirements__c</fullName>
    <label>IT Support Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>