Agentforce/force-app/main/default/objects/Bid_Support__c/fields/IT_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>IT_Supported_By__c</fullName>
    <label>IT Supported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>