Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Lead_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assigned_To__c</fullName>
    <label>Lead Assigned To</label>
    <type>Email</type>
</CustomField>