Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legacy_Atalian_Bid_Support_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Atalian_Bid_Support_Id__c</fullName>
    <label>Legacy Atalian Bid Support Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>