Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legacy_Atalian_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Atalian_Opportunity_ID__c</fullName>
    <label>Legacy Atalian Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>