Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legacy_Atalian_SPID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Atalian_SPID__c</fullName>
    <label>Legacy Atalian SPID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>