Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legacy_OCS_GoNoGo_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_GoNoGo_ID__c</fullName>
    <label>Legacy OCS Go No Go ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>