Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legacy_OCS_Planning_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Planning_ID__c</fullName>
    <label>Legacy OCS Planning ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>