Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legacy_OCS_Pre_Qualification_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Pre_Qualification_ID__c</fullName>
    <label>Legacy OCS Pre Qualification ID</label>
    <type>TextArea</type>
</CustomField>