Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legal_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Legal_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-451 Parent Guarantees</description>
    <label>Legal Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Support</relationshipName>
    <type>Lookup</type>
</CustomField>