Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Legal_Team_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Legal_Team_Feedback__c</fullName>
    <label>Legal Team Feedback</label>
    <type>TextArea</type>
</CustomField>