Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Level_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Support__c</fullName>
    <label>Level of Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Support</fullName>
            </value>
            <value>
                <fullName>Information Sourcing &amp; Formatting</fullName>
            </value>
            <value>
                <fullName>No Support</fullName>
            </value>
            <value>
                <fullName>Design Support Only</fullName>
            </value>
            <value>
                <fullName>Proof Reading &amp; Formatting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>