Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Management_Percent__c.field-meta.xml
<CustomField>
    <fullName>Management_Percent__c</fullName>
    <label>Management %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>