Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Mitigation10__c.field-meta.xml
<CustomField>
    <fullName>Mitigation10__c</fullName>
    <description>Mitigation 10- Data Dictionary Consolidation</description>
    <label>Mitigation 10</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>