Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Mitigation1__c.field-meta.xml
<CustomField>
    <fullName>Mitigation1__c</fullName>
    <description>Mitigation 1- Data Dictionary Consolidation</description>
    <label>Mitigation 1</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>