Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Mitigation2__c.field-meta.xml
<CustomField>
    <fullName>Mitigation2__c</fullName>
    <description>Mitigation 2- Data Dictionary consolidation</description>
    <label>Mitigation 2</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>