Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Mobilisation_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Requirements__c</fullName>
    <label>Mobilisation Requirements</label>
    <type>TextArea</type>
</CustomField>