Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Mobilisation_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Supported_By__c</fullName>
    <label>Mobilisation Supported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>