Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Network</label>
    <type>Checkbox</type>
</CustomField>