Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Network_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Network_Picklist__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(FTTC) Fiber cabinet</fullName>
            </value>
            <value>
                <fullName>ADSL</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>