Agentforce/force-app/main/default/objects/Bid_Support__c/fields/No_of_Child_Bid_Supports__c.field-meta.xml
<CustomField>
    <fullName>No_of_Child_Bid_Supports__c</fullName>
    <description>Populated by DLRS. Number of Child Bid Support records that relate to this Parent Record.</description>
    <label># Child Bid Supports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>