Agentforce/force-app/main/default/objects/Bid_Support__c/fields/OpEx__c.field-meta.xml
<CustomField>
    <fullName>OpEx__c</fullName>
    <label>OpEx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>