Agentforce/force-app/main/default/objects/Bid_Support__c/fields/OpEx_of_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OpEx_of_Annual_Revenue__c</fullName>
    <label>OpEx % of Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>