Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bid Support</relationshipLabel>
    <relationshipName>Bid_Support</relationshipName>
    <type>Lookup</type>
</CustomField>