Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Overhead_Percent__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Percent__c</fullName>
    <label>Overhead %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>