Agentforce/force-app/main/default/objects/Bid_Support__c/fields/Parent_Bid_Support__c.field-meta.xml
<CustomField>
    <fullName>Parent_Bid_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Bid Support</label>
    <referenceTo>Bid_Support__c</referenceTo>
    <relationshipLabel>Bid Support</relationshipLabel>
    <relationshipName>Bid_Support</relationshipName>
    <type>Lookup</type>
</CustomField>